--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     function predict() {
       const directions = ["Top Left", "Top Right", "Center", "Bottom Left", "Bottom Right"];
       const choice = directions[Math.floor(Math.random() * directions.length)];
-      document.getElementById('result').innerText = ⚽️ Shoot to: ${choice};
+      document.getElementById('result').innerText = `⚽️ Shoot to: ${choice}`;
     }
   </script>
 </body>
